--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -38,6 +38,7 @@ jobs:
       - name: deploy
         uses: azure/arm-deploy@v1
         with:
+          scope: Resource Group
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
