--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -1,10 +1,19 @@
 name: ie-bank-infra
 
-on: [push, workflow_dispatch]
+on:
+  workflow_dispatch:
+  push:
+    paths:
+      - "parameters/**"
+      - ".github/**"
+      - "modules/**"
+      - "!scripts/**"
 
 env:
   RESOURCE_GROUP_DEV: aguadamillas_students_1
+  RESOURCE_GROUP_UAT: aguadamillas_students_1
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
+  SUBSCRIPTION_ID_UAT: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: ksulamanidze
 
 jobs:
@@ -19,11 +28,17 @@ jobs:
         run: az bicep build --file ./main.bicep
 
   deploy-dev:
-    #   if: github.ref == 'refs/heads/dev'
+    # if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: "Development"
+    env:
+      ENV: dev
+      DBHOST: ksulamanidze-dbsrv-dev.postgres.database.azure.com
+      DBNAME: ksulamanidze-db-dev
+      FLASK_APP: app.py
+      FLASK_DEBUG: 1
 
     steps:
       # Checkout code
@@ -42,21 +57,22 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{ vars.ENV }} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
-          deploymentName: ${{ env.USER_ALIAS}}
+          parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{ env.ENV }} appServiceAPIEnvVarDBHOST=${{ env.DBHOST }} appServiceAPIEnvVarDBNAME=${{ env.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ env.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ env.FLASK_DEBUG }}
+          deploymentName: ${{ env.USER_ALIAS }}
 
   deploy-uat:
-    if: github.ref == 'refs/heads/dev'
+    #   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
       name: "User Acceptance Testing"
     env:
       ENV: uat
-      DBHOST: ksulamanidze-dbsrv-uat.postgres.database.azure.com
-      DBNAME: ksulamanidze-db-uat
+      DBHOST: aguadamillas-dbsrv-uat.postgres.database.azure.com
+      DBNAME: aguadamillas-db-uat
       FLASK_APP: app.py
       FLASK_DEBUG: 1
+
     steps:
       # Checkout code
       - uses: actions/checkout@main
@@ -71,8 +87,8 @@ jobs:
         uses: azure/arm-deploy@v1
         with:
           scope: resourcegroup
-          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
           parameters: ./parameters/uat.parameters.json appServiceAPIEnvVarENV=${{ env.ENV }} appServiceAPIEnvVarDBHOST=${{ env.DBHOST }} appServiceAPIEnvVarDBNAME=${{ env.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ env.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ env.FLASK_DEBUG }}
-          deploymentName: ${{ env.USER_ALIAS}}
+          deploymentName: ${{ env.USER_ALIAS }}
