--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -1,6 +1,12 @@
 name: ie-bank-infra
 
 on:
+  # push:
+  #   branches:
+  #     - '*'
+  # pull_request:
+  #   branches:
+  #     - '*'
   workflow_dispatch:
   push:
     paths:
@@ -14,7 +20,7 @@ env:
   RESOURCE_GROUP_UAT: aguadamillas_students_1
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   SUBSCRIPTION_ID_UAT: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
-  USER_ALIAS: ksulamanidze
+  USER_ALIAS: keti
 
 jobs:
   build:
@@ -28,15 +34,15 @@ jobs:
         run: az bicep build --file ./main.bicep
 
   deploy-dev:
-    # if: github.ref == 'refs/heads/dev'
+    if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: "Development"
     env:
       ENV: dev
-      DBHOST: ksulamanidze-dbsrv-dev.postgres.database.azure.com
-      DBNAME: ksulamanidze-db-dev
+      DBHOST: keti-dbsrv-dev.postgres.database.azure.com
+      DBNAME: keti-db-dev
       FLASK_APP: app.py
       FLASK_DEBUG: 1
 
@@ -61,15 +67,15 @@ jobs:
           deploymentName: ${{ env.USER_ALIAS }}
 
   deploy-uat:
-    #   if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
       name: "User Acceptance Testing"
     env:
       ENV: uat
-      DBHOST: aguadamillas-dbsrv-uat.postgres.database.azure.com
-      DBNAME: aguadamillas-db-uat
+      DBHOST: keti-dbsrv-uat.postgres.database.azure.com
+      DBNAME: keti-db-uat
       FLASK_APP: app.py
       FLASK_DEBUG: 1
 
