--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -1,26 +1,13 @@
 name: ie-bank-infra
 
-on:
-  # push:
-  #   branches:
-  #     - '*'
-  # pull_request:
-  #   branches:
-  #     - '*'
-  workflow_dispatch:
-  push:
-    paths:
-      - "parameters/**"
-      - ".github/**"
-      - "modules/**"
-      - "!scripts/**"
+on: [push, workflow_dispatch]
 
 env:
   RESOURCE_GROUP_DEV: aguadamillas_students_1
   RESOURCE_GROUP_UAT: aguadamillas_students_1
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   SUBSCRIPTION_ID_UAT: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
-  USER_ALIAS: keti
+  USER_ALIAS: ketis
 
 jobs:
   build:
@@ -34,15 +21,15 @@ jobs:
         run: az bicep build --file ./main.bicep
 
   deploy-dev:
-    if: github.ref != 'refs/heads/main'
+    #   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: "Development"
     env:
       ENV: dev
-      DBHOST: keti-dbsrv-dev.postgres.database.azure.com
-      DBNAME: keti-db-dev
+      DBHOST: ketis-dbsrv-dev.postgres.database.azure.com
+      DBNAME: ketis-db-dev
       FLASK_APP: app.py
       FLASK_DEBUG: 1
 
@@ -59,7 +46,6 @@ jobs:
       - name: deploy
         uses: azure/arm-deploy@v1
         with:
-          scope: resourcegroup
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
@@ -67,15 +53,15 @@ jobs:
           deploymentName: ${{ env.USER_ALIAS }}
 
   deploy-uat:
-    if: github.ref == 'refs/heads/main'
+    #   if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
       name: "User Acceptance Testing"
     env:
       ENV: uat
-      DBHOST: keti-dbsrv-uat.postgres.database.azure.com
-      DBNAME: keti-db-uat
+      DBHOST: ketis-dbsrv-uat.postgres.database.azure.com
+      DBNAME: ketis-db-uat
       FLASK_APP: app.py
       FLASK_DEBUG: 1
 
@@ -92,7 +78,6 @@ jobs:
       - name: deploy
         uses: azure/arm-deploy@v1
         with:
-          scope: resourcegroup
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
